--- a/SpringBootKafka/SpringBootProvider/src/main/resources/application.properties
+++ b/SpringBootKafka/SpringBootProvider/src/main/resources/application.properties
@@ -2,4 +2,4 @@
 spring.application.name=SpringKafkaProvider
 server.port=8080
 
-Spring.kafka.bootstrapServers=localhost:9092
+spring.kafka.bootstrapServers=localhost:9092
